set up django project

--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+django-debug-toolbar = "*"
 
 [packages]
 jupyter = "*"
 requests = "*"
 requests-cache = "*"
+django = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
