--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,17 @@ install:
 - pipenv sync --dev
 addons:
   postgresql: '10'
+before_script:
+- psql -c 'create database fccopif;' -U postgres
 env:
   global:
+  - DJANGO_ENV=prod
   - PIPENV_VERBOSITY=-1
 script:
 - make test
+after_success:
+- test $TRAVIS_BRANCH = “master” && zappa update prod
+before_install:
+- openssl aes-256-cbc -K $encrypted_2e6f30dbbe15_key -iv $encrypted_2e6f30dbbe15_iv
+  -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
