--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 script:
 - make test
 after_success:
-- test $TRAVIS_BRANCH = “master” && zappa update prod
+- test $TRAVIS_BRANCH = “master” && zappa update prod && zappa manage prod 'migrate'
 before_install:
 - openssl aes-256-cbc -K $encrypted_2e6f30dbbe15_key -iv $encrypted_2e6f30dbbe15_iv
   -in secrets.tar.enc -out secrets.tar -d
